# sfm_sandbox

./: .clang-format  .gitignore  LICENSE  README.md
docker/: Dockerfile.amd  Dockerfile.base  build_docker.sh  create_or_start_container.sh
generate_datasets/: hdf5_to_png.py  render_views_of_scene.py  shell_helper.py
sfm_sandbox/: CMakeLists.txt  main.cpp  vcpkg.json
sfm_sandbox/dataloader/include/: dataLoader.h  imageLoader.h
sfm_sandbox/dataloader/src/: dataLoader.cpp  imageLoader.cpp
sfm_sandbox/include/dataloader/: dataLoader.h  dataloader.h
sfm_sandbox/include/frontend/: feature_detector.h  features_cv.h
sfm_sandbox/include/frontend/opencv/: features_orb_ocv.h  features_sift_ocv.h
sfm_sandbox/include/shared/: camera.h  frame.h  image.h
sfm_sandbox/include/visualizer/: visualizer_tools.h
sfm_sandbox/shared/include/: camera.h  frame.h  image.h  sfmTypes.h
sfm_sandbox/shared/src/: camera.cpp  frame.cpp  image.cpp
sfm_sandbox/src/: cv_test.cpp  main.cpp  visualizer_demo.cpp
sfm_sandbox/src/dataloader/: dataLoader.cpp  dataloader.cpp
sfm_sandbox/src/frontend/: features_cv.cpp
sfm_sandbox/src/frontend/opencv/: features_orb_ocv.cpp  features_sift_ocv.cpp
sfm_sandbox/src/shared/: camera.cpp  frame.cpp  image.cpp
sfm_sandbox/src/visualizer/: visualizer_tools.cpp
sfm_sandbox/test/: dataLoader_tests.cpp  dataloader_tests.cpp  features_cv_tests.cpp  generic_feature_detector_tests.cpp  image_tests.cpp
